--- a/1.2.pricing_UI/pricing/Dockerfile
+++ b/1.2.pricing_UI/pricing/Dockerfile
@@ -1,8 +1,32 @@
-FROM node:14-alpine
+# Base image
+FROM node:14 as builder
+
+# Set the working directory
 WORKDIR /app
+
+# Copy package.json and package-lock.json
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
+
+# Copy the entire project
 COPY . .
+
+# Build the React app
 RUN npm run build
-EXPOSE 3000
-CMD ["npm", "start"]
+
+# Use Nginx as the production server
+FROM nginx:stable-alpine
+
+# Remove the default Nginx configuration
+RUN rm /etc/nginx/conf.d/default.conf
+
+# Copy the build folder from the builder stage
+COPY --from=builder /app/build /usr/share/nginx/html
+
+# Expose port 80 (Nginx default)
+EXPOSE 80
+
+# Start Nginx
+CMD ["nginx", "-g", "daemon off;"]
