--- a/1.3.pricing_be/package.json
+++ b/1.3.pricing_be/package.json
@@ -14,8 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.2.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
