--- a/1.2.pricing_UI/pricing/package.json
+++ b/1.2.pricing_UI/pricing/package.json
@@ -12,6 +12,7 @@
     "@mui/lab": "^5.0.0-alpha.131",
     "@mui/material": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,8 +20,10 @@
     "antd": "^5.5.0",
     "axios": "^1.4.0",
     "i18next": "^22.4.15",
+    "install": "^0.13.0",
     "intl-messageformat": "^10.3.5",
     "intl-messageformat-parser": "^6.4.4",
+    "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
