--- a/1.2.pricing_UI/pricing/package.json
+++ b/1.2.pricing_UI/pricing/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "i18next": "^22.4.15",
     "install": "^0.13.0",
     "intl-messageformat": "^10.3.5",
@@ -28,6 +29,7 @@
     "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
