--- a/1.3.pricing_be/package.json
+++ b/1.3.pricing_be/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.2.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
