--- a/1.2.pricing_UI/pricing/package.json
+++ b/1.2.pricing_UI/pricing/package.json
@@ -10,7 +10,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/lab": "^5.0.0-alpha.131",
-    "@mui/material": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
@@ -23,9 +22,7 @@
     "i18next": "^22.4.15",
     "install": "^0.13.0",
     "intl-messageformat": "^10.3.5",
-    "intl-messageformat-parser": "^6.4.4",
     "mdb-react-ui-kit": "^6.1.0",
-    "mdbreact": "^5.2.0",
     "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -39,6 +36,7 @@
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
     "redux": "^4.2.1",
+    "stable": "^0.1.8",
     "styled-components": "^5.3.10",
     "twind": "^0.16.19",
     "uuid": "^9.0.0",
