--- a/1.3.pricing_be/package.json
+++ b/1.3.pricing_be/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "body-parse": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
-    "ws": "^8.13.0"
+    "openai": "^3.2.1",
+    "ws": "^8.4.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
