--- a/1.2.pricing_UI/pricing/package.json
+++ b/1.2.pricing_UI/pricing/package.json
@@ -23,6 +23,7 @@
     "install": "^0.13.0",
     "intl-messageformat": "^10.3.5",
     "mdb-react-ui-kit": "^6.1.0",
+    "natural": "^6.5.0",
     "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
