--- a/1.3.pricing_be/package.json
+++ b/1.3.pricing_be/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
     "natural": "^6.5.0",
+    "nodemailer": "^6.9.3",
     "openai": "^3.2.1",
     "ws": "^8.4.0"
   },
