integrate with a Son

--- a/1.2.pricing_UI/pricing/package.json
+++ b/1.2.pricing_UI/pricing/package.json
@@ -19,7 +19,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
+    "caffino-feedback-module": "^1.0.12",
     "chart.js": "^4.3.0",
+    "firebase": "^9.23.0",
     "i18next": "^22.4.15",
     "install": "^0.13.0",
     "intl-messageformat": "^10.3.5",
